- Added logback logging - Created executable bash script that launches java program -